@@ -26,6 +26,7 @@ var forge = require('node-forge');
 var profile = require('../../../util/profile');
 var utils = require('../../../util/utils');
 var kvUtils = require('./kv-utils');
+var kvLegacy = require('./kv-legacy');
 
 var $ = utils.getLocaleString;
 
@@ -35,7 +36,7 @@ var KEY_DEST_TYPE_MAP = {
 };
 var KEY_DESTS = Object.keys(KEY_DEST_TYPE_MAP);
 
-var KEY_OPS = ['encrypt', 'decrypt', 'wrap', 'unwrap', 'sign', 'verify', 'backup', 'restore'];
+var KEY_OPS = ['encrypt', 'decrypt', 'sign', 'verify', 'wrapKey', 'unwrapKey'];
 
 exports.init = function(cli) {
   var log = cli.output;
@@ -645,7 +646,9 @@ exports.init = function(cli) {
     var subscription = profile.current.getSubscription(options.subscription);
     log.verbose(util.format($('Using subscription %s (%s)'), subscription.name, subscription.id));
     options.vaultUri = 'https://' + options.vaultName + '.vault.azure.net';
-    return utils.createKeyVaultClient(subscription, options.vaultUri);
+    var newClient = utils.createKeyVaultClient(subscription, options.vaultUri);
+    // The new client returns high-level objects, we need low-level JSON objects for CLI.
+    return new kvLegacy.KeyVaultClient(newClient._internalClient);
   }
   
   function isPemEncrypted(pem) {
