@@ -23,6 +23,7 @@ var util = require('util');
 var profile = require('../../../util/profile');
 var utils = require('../../../util/utils');
 var kvUtils = require('./kv-utils');
+var kvLegacy = require('./kv-legacy');
 
 var $ = utils.getLocaleString;
 
@@ -406,7 +407,9 @@ exports.init = function(cli) {
     var subscription = profile.current.getSubscription(options.subscription);
     log.verbose(util.format($('Using subscription %s (%s)'), subscription.name, subscription.id));
     options.vaultUri = 'https://' + options.vaultName + '.vault.azure.net';
-    return utils.createKeyVaultClient(subscription, options.vaultUri);
+    var newClient = utils.createKeyVaultClient(subscription, options.vaultUri);
+    // The new client returns high-level objects, we need low-level JSON objects for CLI.
+    return new kvLegacy.KeyVaultClient(newClient._internalClient);
   }
 
   function getSecretIdentifier(options) {
