@@ -58,7 +58,7 @@
     "azure-monitoring": "0.10.0",
     "azure-storage": "0.4.1",
     "azure-storage-legacy": "0.9.13",
-    "azure-keyvault": "0.9.2",
+    "azure-keyvault": "0.10.0",
     "azure-arm-apiapp": "0.1.3",
     "caller-id": "0.1.x",
     "colors": "0.x.x",
