@@ -4,6 +4,8 @@
     * Added create, delete, show, list, start, stop and restart commands
   * ApiApp
     * Added create command
+  * Key Vault
+    * Commands now use Key Vault REST API v2015-06-01
 * ASM
   * site
     * Bug fixes for Issues #1666, Added support for PHP version 5.6
@@ -38,7 +40,7 @@
   * Network
     * Commands to manage DNS Zone and DNS Zone recordset
   * Key Vault
-    * Added commands to manage vaults, keys and secrets (azure vault)
+    * Added commands to manage vaults, keys and secrets (azure keyvault)
   * Insights
     * Added commands to handle alerts and alert rules, autoscale events and autoscale settings, list metrics and metrics definitions, and list usage metrics
   * ApiApp
